修改了格式

--- a/content/post/如何创建博客.md
+++ b/content/post/如何创建博客.md
@@ -7,16 +7,27 @@ draft: false
 # 今天学习了创建博客
 
 使用Hugo，go语言实现的一个博客生成器
-1，在vscode上，使用 Hugo官网代码，按步骤创建博客框架
-2，创建 .gitignore 文件，输入 /public/
-3，打开 cd public
-4，git init  创建.git仓库
-5，git add .  关联这些文件
-6，git commit -v 保存并提交注释
-7，在github上创建仓库，复制仓库地址代码，在vscode上运行
-8，在github上打开settings，打开github pages，查询网址
-9，git push
-10，每次写完新的博客：1，git add .  2,gc  3,hugo  4,cd public/   5,git push，6，hugo server 运行hugo
+
+1. 在vscode上，使用 Hugo官网代码，按步骤创建博客框架
+
+2. 创建 .gitignore 文件，输入 /public/
+
+3. 打开 cd public
+
+4. git init  创建.git仓库
+
+5. git add .  关联这些文件
+
+6. git commit -v 保存并提交注释
+
+7. 在github上创建仓库，复制仓库地址代码，在vscode上运行
+
+8. 在github上打开settings，打开github pages，查询网址
+
+9. git push
+
+10. 每次写完新的博客：1，git add .  2,gc  3,hugo  4,cd public/   5,
+git push，6，hugo server 运行hugo
 
 
 
