修改了博客内容

--- a/content/post/如何创建博客.md
+++ b/content/post/如何创建博客.md
@@ -26,8 +26,9 @@ draft: false
 
 9. git push
 
-10. 每次写完新的博客：1，git add .  2,gc  3,hugo  4,cd public/   5,
-git push，6，hugo server 运行hugo
+10. 每次写完新的博客：1，git add .  2,gc  3,hugo  4,cd public/   
+5,git add .  6,gc   7,git push
+
 
 
 
